[gd_scene load_steps=6 format=3 uid="uid://4d83bcmubmyj"]

[ext_resource type="Theme" uid="uid://2h34o6dyfay6" path="res://Themes/MenuButton.tres" id="1_ampnh"]
[ext_resource type="Script" uid="uid://cqf8lk7ovkxd6" path="res://Scripts/level_selector.gd" id="1_lirpq"]
[ext_resource type="FontFile" uid="uid://cw2hahl38r837" path="res://Assets/Font/Ash.ttf" id="2_y46r8"]
[ext_resource type="PackedScene" uid="uid://cjd6qeskdm2g1" path="res://Scenes/Levels/LevelGenerator.tscn" id="4_8iqa8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y46r8"]
bg_color = Color(0.877837, 0.485697, 1.73271e-06, 1)

[node name="LevelSelector" type="Node2D"]
script = ExtResource("1_lirpq")

[node name="BeggineerLevel" type="Button" parent="."]
offset_left = 39.0
offset_top = 430.0
offset_right = 373.0
offset_bottom = 479.0
theme = ExtResource("1_ampnh")
text = "Beggineer"

[node name="AdvancedLevel" type="Button" parent="."]
offset_left = 425.0
offset_top = 432.0
offset_right = 764.0
offset_bottom = 481.0
theme = ExtResource("1_ampnh")
text = "Advanced "

[node name="ExpertLevel" type="Button" parent="."]
offset_left = 823.0
offset_top = 432.0
offset_right = 1062.0
offset_bottom = 481.0
theme = ExtResource("1_ampnh")
text = "Expert"

[node name="SelectLevel" type="Label" parent="."]
offset_left = 73.0
offset_top = 274.0
offset_right = 1548.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("2_y46r8")
theme_override_font_sizes/font_size = 40
text = "Select the Level Difficulty"

[node name="Window" type="Window" parent="."]
transparent_bg = true
title = "Confirm Phase?"
position = Vector2i(390, 335)
size = Vector2i(400, 40)
theme_override_fonts/title_font = ExtResource("2_y46r8")
theme_override_font_sizes/title_font_size = 20
theme_override_styles/embedded_border = SubResource("StyleBoxFlat_y46r8")

[node name="Yes" type="Button" parent="Window"]
offset_left = 16.0
offset_top = 3.0
offset_right = 51.0
offset_bottom = 34.0
text = "Yes"

[node name="No" type="Button" parent="Window"]
offset_left = 356.0
offset_top = 6.0
offset_right = 387.0
offset_bottom = 37.0
text = "No"

[node name="LevelGenerator" parent="." instance=ExtResource("4_8iqa8")]

[connection signal="pressed" from="BeggineerLevel" to="." method="_on_beggineer_level_pressed"]
[connection signal="pressed" from="AdvancedLevel" to="." method="_on_advanced_level_pressed"]
[connection signal="pressed" from="ExpertLevel" to="." method="_on_expert_level_pressed"]
[connection signal="pressed" from="Window/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Window/No" to="." method="_on_no_pressed"]
